# EduAgents

./: .gitignore  AI_AGENT_UI_UX_RESEARCH_REPORT.md  CLAUDE.md  LICENSE  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROJECT_COMPLETION_REPORT.md  PROTOTYPE_README.md  QUICK_START.md  README.md  TEST_STRATEGY.md  conversation-2025-09-19-182541.txt  education-director.md  educational-researcher.md
.claude/: settings.local.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env  .env.example  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  README_BUSINESS_FLOW_TEST.md  STRUCTURE.md  UV_MIGRATION.md  create_tables.sql  docker-compose.yml  pyproject.toml  requirements.txt  simple_app.py  test_complete_enhanced_system.py
backend/alembic/versions/: 002_add_course_system.py
backend/app/: main.py  main_simple.py  simple_test_main.py
backend/app/agents/: README.md  __init__.py
backend/app/agents/core/: __init__.py  base_agent.py  llm_manager.py  orchestrator.py  quality_validator.py  requirement_parser.py  state.py  task_tracker.py  time_scheduler.py
backend/app/agents/specialists/: __init__.py  assessment_expert.py  content_designer.py  course_architect.py  education_theorist.py  material_creator.py
backend/app/api/v1/: agents.py  auth.py  collaboration.py  collaboration_tracking.py  course_export.py  courses.py  health.py  projects.py  quality.py  templates.py  websocket.py
backend/app/core/: ai_call_logger.py  auth.py  cache.py  collaboration_tracker.py  config.py  database.py  deps.py  exceptions.py  middleware.py
backend/app/models/: base.py  course.py  user.py
backend/app/schemas/: agent.py  collaboration.py  course.py  course_export.py  enhanced_course.py  quality.py  template.py
backend/app/services/: agent_orchestrator.py  agent_service.py  collaboration_service.py  course_persistence_service.py  document_generator.py  enhanced_course_designer.py  enhanced_export_service.py  export_service.py  fpdf_chinese_service.py  quality_checker.py  real_agent_service.py  template_service.py  vector_service.py
backend/app/utils/: cache.py  logger.py  vector_store.py
backend/docker/: Dockerfile  chroma-compose.yml
backend/docs/: AGENT_WORKFLOW_ANALYSIS.md  API_SPECIFICATION.md  DEPLOYMENT_GUIDE.md
backend/exports/docx/: enhanced_course_57b29330-f3d1-4ec7-897f-c1eb30101acd_20250921_222118.docx  pbl_course_a77b1bdc-1beb-42c4-aea9-bc3a595b49a2_20250921_214003.docx
backend/exports/html/: enhanced_course_57b29330-f3d1-4ec7-897f-c1eb30101acd_20250921_222117.html  pbl_course_373e54ba-32e9-4115-91a7-e3486fa281a4_20250921_221327.html  pbl_course_a77b1bdc-1beb-42c4-aea9-bc3a595b49a2_20250921_214003.html
backend/exports/json/: enhanced_course_57b29330-f3d1-4ec7-897f-c1eb30101acd_20250921_222117.json  pbl_course_a77b1bdc-1beb-42c4-aea9-bc3a595b49a2_20250921_214003.json
backend/scripts/: dev.py  format.py  init_schema.py  init_schema.sql  lint.py  restart.sh  run_business_flow_test.py  start.py  start.sh  status.sh  stop.sh  test.py  test_db_connection.py  test_direct_db.py  test_enhanced.py
backend/templates/documents/: student_handbook.html  teaching_plan.html
backend/templates/documents/styles/: student_handbook.css  teaching_plan.css
backend/tests/: conftest.py  factories.py
backend/tests/agent_collaboration/: test_multi_agent_system.py
backend/tests/integration/: test_api.py  test_business_flow.py  test_simple_api.py
backend/tests/unit/: test_agents.py  test_cache_service.py  test_export_service.py  test_vector_service.py
docs/: AI_AGENT_CUSTOMIZATION_STRATEGY.md  PBL_METHODOLOGY_RESEARCH_REPORT.md  PRODUCT_REQUIREMENTS_DOCUMENT.md  brand_tone_guide.md
docs/agents/: README.md  assessment_expert.md  content_designer.md  course_architect.md  education_theorist.md  material_creator.md
docs/agents/archive/: assessment-feedback-specialist.md  community-coordinator.md  creative-technologist.md  learning-experience-designer.md  makerspace-manager.md  pbl-curriculum-designer.md
frontend/: DESIGN_SYSTEM.md  package-lock.json  package.json  tailwind.config.js  test.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/prototype/: layout.tsx  page.tsx
frontend/src/app/prototype/analytics/: page.tsx
frontend/src/app/prototype/builder/: page.tsx
frontend/src/app/prototype/design/: page.tsx
frontend/src/components/: DesignSystemDemo.tsx
frontend/src/components/collaboration/: AgentCard.tsx  CollaborationPanel.tsx  CollaborationWorkspace.tsx
frontend/src/hooks/: useWebSocket.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: collaborationStore.ts
monitoring/: grafana_dashboard.json  monitoring_system.py
pbl-course-designer-prototype/: README.md  index.html  产品设计文档.md
pbl-course-designer-prototype/css/: agents.css  course-editor.css  main.css
pbl-course-designer-prototype/data/: sample-courses.json
pbl-course-designer-prototype/js/: agents.js  course-editor.js  main.js
performance_tests/: load_test.py  stress_test.py
scripts/: manage.sh
